Bettered the useablity of the web interface. Submission no longer takes one to a new page, fonts were improved, and a bug on Safari was rooted out.

--- a/Server/webs/css/index.css
+++ b/Server/webs/css/index.css
@@ -1,7 +1,7 @@
 body
 {
 	background-image: url('img/bg.png');
-	font-family: "calibri";
+	font-family: Helvetica;
 	font-size: 12px;
 	text-shadow: 1px 1px 2px #222222;
 	color: #CFD0CC;
@@ -31,6 +31,8 @@ textarea
 	background-color: #191A19;
 	color: #DDDDDD;
 	font-size: 12px;
+	font-family: "Lucida Console", Monaco, monospace;
+	resize: vertical;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #999966;
